# price_tracker

./: .env  .env.example  .gitignore  README.md  app.py  config.py  price_tracker.db  pyproject.toml  requeriments.txt  requirements.txt  scheduler.py
database/: models.py  repository.py
notifications/: discord_notifier.py
scrapers/: _kabum_worker.py  base_scraper.py  kabum.py  mercadolivre.py
